[gd_scene load_steps=3 format=3 uid="uid://ctpwrevlsospi"]

[ext_resource type="Script" uid="uid://bxhbfxs00k3yg" path="res://ui/popup_menu.gd" id="1_1s2af"]

[sub_resource type="LabelSettings" id="LabelSettings_ppgk2"]
font_size = 24

[node name="PopupMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_1s2af")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Result" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "placeholder"
label_settings = SubResource("LabelSettings_ppgk2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Resume" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Restart" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="Exit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
